# libcppio

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
bindings/go/: cppio.go
bindings/python/: python_bindings.cpp
include/cppio/: cppio_c.h  errors.h  ioline.h  iolinemanager.h  message.h  poller.h  visibility.h
python/: python_bindings.cpp
src/: cppio_c.cpp  iolinemanager.cpp  iolinemanager.h  message.cpp
src/common/: inproc.cpp  inproc.h  select_poller.cpp  select_poller.h
src/posix/: createlinemanager.cpp  io_socket.cpp  io_socket.h
src/win32/: createlinemanager.cpp  pipes.cpp  pipes.h  win_socket.cpp  win_socket.h
tests/: inproc_integration_test.cpp  inproc_test.cpp  message_test.cpp  messageprotocol_test.cpp  pipes_test.cpp  select_poller_posix_test.cpp  unixsocket_test.cpp  winsocket_test.cpp
tests/bindings/go/: bindings_test.go
